composer all up